# freeflow

./: .gitignore  README.md  RELEASE_NOTES.md  STT.md  api.py  audio_capture.py  build.py  build_python.py  config.py  gui.py  history.py  hotkey_manager.py  index.html  indicator.html  main.py  package-lock.json  package.json  requirements.txt  settings_dialog.py  transcriber.py  vite.config.ts
electron/: index.html  main-window-renderer.js  main-window.css  main-window.html  main.js  package-lock.json  package.json  preload.js  renderer.js  setup.html  styles.css
python/: api.py  audio_capture.py  history.py  hotkey_manager.py  keyboard_output.py  replacements.py  requirements.txt  transcriber.py
scripts/: generate-icon.ps1
src/: App.tsx  indicator.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  db.rs  error.rs  hotkey.rs  indicator.rs  lib.rs  main.rs  pipeline.rs  settings.rs
src-tauri/src/llm/: mod.rs  ollama.rs
src-tauri/src/output/: clipboard.rs  mod.rs  paste.rs
src-tauri/src/stt/: mod.rs  whisper.rs
src/components/: BrandMark.tsx  HistoryList.tsx  HotkeyCapture.tsx  SettingsPanel.tsx  VocabularyEditor.tsx  WindowControls.tsx
src/lib/: api.ts
