[package]
name = "freeflow2"
version = "0.1.1"
description = "Dictation with LLM cleanup via Ollama"
edition = "2021"
rust-version = "1.77"

[lib]
name = "freeflow2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

rusqlite = { version = "0.32", features = ["bundled"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"

# Audio capture
cpal = "0.15"

# Whisper STT
whisper-rs = { version = "0.13", default-features = false }

# Global keyboard hook (supports left/right modifier distinction)
rdev = "0.5"

# Keystroke simulation for paste
enigo = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
